[gd_scene load_steps=3 format=3 uid="uid://by115lditjx20"]

[ext_resource type="Script" path="res://menus/singleplayer.gd" id="1_6xlc5"]
[ext_resource type="Texture2D" uid="uid://biknsqlgwrx45" path="res://data/materials/grass/Color.jpg" id="2_fpy6k"]

[node name="SinglePlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xlc5")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fpy6k")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -68.0
offset_right = 48.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="New" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
text = "New Game"

[node name="Load" type="Button" parent="Menu"]
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 2
text = "Settings"

[node name="Back" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../New")
text = "Back"

[connection signal="pressed" from="Menu/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Menu/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Back" to="." method="_on_back_pressed"]
